--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,57 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.container{
+  height: 100vh;
+  
+}
+.container .sunImg{
+  width: 20%;
+}
+.container .moonImg{
+  width: 15%;
+  margin-top: 30px;
+  margin-bottom: 50px;
+}
+.navContainer {
+  padding: 20px 0px;
+  display: flex;
+  justify-content: space-around;
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
+}
+.navContainer h2 span{
+  color: rgb(55, 160, 160);;
+}
+.navContainer button{
+  border-radius: 40px;
+  border: 0;
+  width: 150px;
+  font-size: 16px;
+  cursor: pointer;
+}
+.navContainer button:hover{
+  background-color: rgb(95, 187, 187);
+  color: white;
+  font-weight: 900;
+}
+.themContainer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-size:26px;
+}
+@media (max-width: 768px) {
+  .container .sunImg{
+    width: 80%;
+  }
+  .container .moonImg{
+    width: 60%;
+  }
+  .navContainer{
+    padding: 20px 20px;
+  }
+  .navContainer h2{
+    font-size: 14px;
+  }
+}
